--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,8 +7,9 @@ html, body {
 
 .body-content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
+    height: 100%;
 }
 
 .header {
@@ -30,6 +31,10 @@ html, body {
 
 .hamburger-container:hover {
     cursor: pointer;
+}
+
+.hamburger-container:focus {
+    outline: 0 !important;
 }
 
 .hamburger {
@@ -76,4 +81,58 @@ html, body {
 
 .right {
     margin: 0 0 0 auto !important;
+}
+
+.dropdown-nav {
+    display: flex;
+    flex-direction: column;
+
+    position: absolute;
+    visibility: hidden;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+.dropdown-nav a {
+    display: block;
+    width: 10em;
+
+    text-decoration: none;
+    background-color: #e5e5e5;
+    color: #111;
+
+    padding: 2em 6em 2em 3em;
+
+    border-bottom: 4px solid #aaa;
+}
+
+.dropdown-nav a:hover {
+    background-color: #ccc;
+}
+
+.dropdown-nav a:last-child:hover {
+    background-color: #e5e5e5;
+}
+
+.section-header {
+    background-color: #111;
+    color: #FFF;
+
+    padding-left: 3em;
+}
+
+.section-header p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+    
+    margin: 0;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
 }
