Make advances on frontend design

--- a/static/css/counter.css
+++ b/static/css/counter.css
@@ -12,6 +12,8 @@
     display: inherit;
     flex-direction: column;
 
+    background-color: #fff;
+    border-right: 2px solid #111;
     /* Width property value depenant on .calorie-history's width value*/
     /*width: 100%;*/
 }
@@ -31,6 +33,28 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 1.25em;
     font-weight: bold;
+}
+
+.advanced-btn {
+    display: block;
+    margin-top: 1em;
+
+    font-family: 'Roboto', sans-serif;
+    color: #888;
+
+    cursor: pointer;
+}
+
+.advanced-btn:hover {
+    color: #656565;
+}
+
+.advanced-btn:active {
+    color: #000;
+}
+
+.optional-form {
+    display: none;
 }
 
 .form-input input {
@@ -75,30 +99,32 @@
 
 .calorie-history {
     width:560px;
+    border-left: 2px solid #111;
 }
 
 .calories-table {
-    margin: 1em 1em 0 0;
+    padding: 0;
+    border-bottom: 2px solid #111;
 }
 
 .calories-table-desc {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.5em;
 
-    width:100%;
+    width: 100%;
+    padding: 0.5em 1em 0.5em 1em;
 }
 
 .calorie-entries {
     font-size: 1.25em;
     font-family: 'Open Sans', sans-serif;
-    padding-left: 2em;
 
     text-align: center;
+
+    border-right: 2px solid #111;
 }
 .section-header:not(:last-of-type) {
-    border-right: 5px solid #444;
 }
 
 .section-header:last-child {
-    border-right: 5px solid #444;
 }
