--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
-{% block header %}
+{% block head %}
         <link href="/static/css/index.css" rel="stylesheet" />
 {% endblock %}
