--- a/static/css/index.css
+++ b/static/css/index.css
@@ -92,7 +92,7 @@ html, body {
 
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    
+
     width: 100%;
     height: 100%;
 
@@ -126,8 +126,8 @@ html, body {
 }
 
 .section-header {
-    background-color: #111;
-    color: #FFF;
+    background-color: #2b68d1;
+    color: #fff;
 }
 
 .section-header p {
