--- a/templates/calories.html
+++ b/templates/calories.html
@@ -4,7 +4,7 @@
                 advancedBtn = document.getElementsByClassName("advanced-btn")[0];
                 advancedBtnClick = false;
                 advancedOptions = document.getElementsByClassName("optional-form");
-            
+
                 advancedBtn.addEventListener("click", function() {
                     advancedBtnClick = !advancedBtnClick;
 
@@ -19,6 +19,7 @@
                 });
 {% endblock %}
 {% block head %}
+        <script src="https://d3js.org/d3.v5.min.js"></script>
         <link href="/static/css/index.css" rel="stylesheet">
         <link href="/static/css/counter.css" rel="stylesheet">
 {% endblock %}
@@ -68,14 +69,10 @@
                         {% endif %}
                         {% endfor %}
                         <div class="form-submit-wrapper">
-                            <button class="additional-entry-btn">Add To List</button>
-                            <input type="submit" value="Save" />
+                            <button class="additional-entry-btn" type="submit">Save</button>
                         </div>
                     </form>
                 </div>
-            </div>
-            <div class="section-header section-header-padded">
-                <p>Calorie List</p>
             </div>
         </div>
         <div class="calorie-chart-wrapper">
@@ -88,15 +85,15 @@
                 <p>Calorie History</p>
             </div>
             <table class="calories-table">
-                {% if calories %}
+                {% if calories_daily %}
                 <tr>
                     <th class="calories-table-desc">Day</th>
                     <th class="calories-table-desc">Calories</th>
                 </tr>
-                {% for entry in calories %}
+                {% for entry in calories_daily %}
                 <tr class="calorie-entries">
-                    <td class="timestamp">{{ entry.ts }}</td>
-                    <td class="calories">{{ entry.calories }}</td>
+                    <td class="timestamp">{{ entry.calorie_day }}</td>
+                    <td class="calories">{{ entry.calorie_sum }}</td>
                 </tr>
                 {% endfor %}
                 {% else %}
