--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,14 +10,17 @@ html, body {
     flex-direction: row;
     width: 100%;
     height: 100%;
+
+    background-color: #1a1a1a;
 }
 
 .header {
     display: flex;
     flex-direction: row;
 
-    border-bottom: 1px solid #e0e0e0;
     box-shadow: 0px 0px 5px #ccc;
+
+    background-color: #1a1a1a;
 }
 
 .hamburger-container {
@@ -40,7 +43,7 @@ html, body {
 .hamburger {
     width: 25px;
     height: 5px;
-    background-color: rgb(0, 0, 0);
+    background-color: #fff;
     margin-bottom: 4px;
     border-radius: 4px;
 }
@@ -61,7 +64,7 @@ html, body {
 
     /*border-right: 3px solid rgb(207, 207, 207);*/
 
-    color: rgb(0, 0, 0);
+    color: #fff;
     text-decoration: none;
 
     font-family: 'Roboto', sans-serif;
@@ -126,7 +129,7 @@ html, body {
 }
 
 .section-header {
-    background-color: #2b68d1;
+    background-color: #352c95;
     color: #fff;
 }
 
