--- a/static/css/counter.css
+++ b/static/css/counter.css
@@ -1,4 +1,4 @@
-.counter {
+.calorie-counter, .weight-counter {
     display: flex;
     flex-direction: row;
 
@@ -10,18 +10,56 @@
     width: 100%;
 }
 
+.weight-counter {
+    display: none;
+}
+
 .counter-form {
     display: inherit;
     flex-direction: column;
-
-    /*border-right: 2px solid #fff;*/
 }
 
-.form-wrapper {
+.form-body {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    border-right: 2px solid #111;
+    border-bottom: 2px solid #111;
+
+    /*box-shadow: -2px -5px 10px #000;*/
+
+    height: 100%;
 }
 
-.form-section {
-    margin: 1em 2em 0 3em;
+.form-tabs {
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    background-color: #000;
+
+    display: flex;
+}
+
+.form-tab {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    width: 100%;
+}
+
+.form-tab:hover {
+    background-color: #254fa7;
+    cursor: pointer;
+}
+
+.form-tab-active {
+    background-color: #1e66ff;
+    font-weight: bold;
+}
+
+.calorie-form-section, .weight-form-section {
+    margin: 1em 0em 1em 0em;
 }
 
 .form:not(:first-child) {
@@ -57,12 +95,12 @@
 }
 
 .form-input input {
-    width: 320px;
+    width: 250px;
     height: 40px;
 
     margin-top: 1em;
 
-    border: 2px solid #000;
+    border: 1px solid #000;
     text-indent: 10px;
 
     background-color: #262626;
@@ -88,21 +126,23 @@
 .additional-entry-btn {
     /* Sizes button to equal height of submit button */
     border: 1px solid #000;
-    background-color: #000;
+    background-color: #1e66ff;
     color: #fff;
 
-    padding: 0.5em 1em 0.5em 1em;
+    padding: 0.75em 2em 0.75em 2em;
 }
 
 .additional-entry-btn:hover {
-    background-color: #333;
+    background-color: #254fa7;
     cursor: pointer;
 }
 
 /* Calorie chart begin */
-.calorie-chart-wrapper {
+.chart-wrapper {
     width: 80%;
 }
+
+.calorie-chart, .weight-chart {}
 /* Calorie chart end */
 
 
@@ -111,11 +151,25 @@
     /*border-left: 2px solid #fff;*/
 }
 
+.table-body {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    border-left: 2px solid #111;
+    border-bottom: 2px solid #111;
+    /*box-shadow: 2px -5px 5px #000;*/
+
+    height: 100%;
+}
+
 .calories-table {
-    padding: 0em 1.5em 2em 0em;
-    text-align: center;
+    text-align: left;
     font-family: 'Roboto', sans-serif;
-    margin: 0 auto;
+
+    border-collapse: collapse;
+
     width:100%;
 }
 
@@ -124,7 +178,10 @@
     font-size: 1.5em;
 
     width: 100%;
-    padding: 0.5em 1em 0.5em 1em;
+}
+
+.calories {
+    text-align: left;
 }
 
 .section-header:not(:last-of-type) {
